--- a/OculusPlayspaceMover/OculusPlayspaceMover.csproj
+++ b/OculusPlayspaceMover/OculusPlayspaceMover.csproj
@@ -21,6 +21,9 @@
     <Reference Include="Il2Cppmscorlib">
       <HintPath>$(SolutionDir)\_deps\Managed\Il2Cppmscorlib.dll</HintPath>
     </Reference>
+    <Reference Include="MelonLoader">
+      <HintPath>$(SolutionDir)\_deps\MelonLoader.dll</HintPath>
+    </Reference>
     <Reference Include="MelonLoader.ModHandler">
       <HintPath>$(SolutionDir)\_deps\MelonLoader.ModHandler.dll</HintPath>
     </Reference>
@@ -32,6 +35,9 @@
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>$(SolutionDir)\_deps\Managed\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>$(SolutionDir)\_deps\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
